# nextdeploy-blink1

./: .gitignore  CMakeLists.txt  LICENSE  README.md  doxygen.config
src/: main.c
src/ndeployblink1/blink1/: ndblink1.c  ndblink1.h
src/ndeployblink1/blink1/lib/: blink1-lib-lowlevel-hidapi.h
src/ndeployblink1/core/: ndconfig.c  ndconfig.h  ndsignal.c  ndsignal.h
src/ndeployblink1/ndeploy/: ndapiclient.c  ndapiclient.h  ndmodel.c  ndmodel.h
